# nb2tg

./: .gitignore  bot.py  database.py  patch.py  pyproject.toml  run.sh  telegram_app.py  utils.py
