[project]
name = "nb2tg"
version = "0.1.0"
description = "nb2tg"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" }
]
plugin_dirs = []
builtin_plugins = []
